--- a/amp/sthai.html
+++ b/amp/sthai.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>OBCTOP 🔥 Permainan Online Slot Thailand Terpercaya Gacor Hari Ini Gampang Maxwin</title>
+   <title>OBCTOP ⚡️ Permainan Online Slot Thailand Terpercaya Gacor Hari Ini Gampang Maxwin</title>
    <meta name="description" content="Obctop merupakan salah satu situs penyedia permainan online slot thailand terpercaya dan link slot gacor hari ini yang gampang maxwin dengan memberikan banyak perkalian pada semua provider slot online yang tersedia di situs obctop." />
    <meta name="keywords" content="OBCTOP"/>
    <meta name="robots" content="index,follow" />
