--- a/amp/premiocondo.html
+++ b/amp/premiocondo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,maximum-scale=1">
     <meta http-equiv="content-language" content="id">
-    <link rel="canonical" href="https://premiocondo.com/Promotion">
+    <link rel="canonical" href="https://premiocondo.com/Promotion/">
     <title>OBC4D 💫 Situs Resmi Prediksi Jitu Angka Keluaran Paito Warna HK Pools Hari Ini</title>
     <meta name="description" content="OBC4D merupakan salah satu situs resmi yang selalu menyediakan prediksi jebolan jitu angka keluaran resmi tabel paito warna hongkong pools hari ini yang selalu di update setiap hari.">
     <meta name="robots" content="index, follow">
@@ -13,7 +13,7 @@
     <meta content="width" name="MobileOptimized">
     <meta property="og:title" content="OBC4D 💫 Situs Resmi Prediksi Jitu Angka Keluaran Paito Warna HK Pools Hari Ini">
     <meta property="og:description" content="OBC4D merupakan salah satu situs resmi yang selalu menyediakan prediksi jebolan jitu angka keluaran resmi tabel paito warna hongkong pools hari ini yang selalu di update setiap hari.">
-    <meta property="og:url" content="https://premiocondo.com/Promotion">
+    <meta property="og:url" content="https://premiocondo.com/Promotion/">
     <meta property="og:site_name" content="OBC4D">
     <meta property="og:author" content="OBC4D">
     <meta property="og:image" content="https://i.imgur.com/4CLn7i6.png">
@@ -39,7 +39,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "OBC4D 💫 Situs Resmi Prediksi Jitu Angka Keluaran Paito Warna HK Pools Hari Ini",
-    "url": "https://premiocondo.com/Promotion",
+    "url": "https://premiocondo.com/Promotion/",
     "description": "OBC4D merupakan salah satu situs resmi yang selalu menyediakan prediksi jebolan jitu angka keluaran resmi tabel paito warna hongkong pools hari ini yang selalu di update setiap hari.",
     "breadcrumb": {
       "@type": "BreadcrumbList",
@@ -49,7 +49,7 @@
           "position": "1",
           "item": {
             "@type": "WebSite",
-            "@id": "https://premiocondo.com/Promotion",
+            "@id": "https://premiocondo.com/Promotion/",
             "name": "OBC4D"
           }
         }
@@ -708,7 +708,7 @@
 
         <hr>
         <div class="footer">
-            &copy; Copyright | <a href="https://premiocondo.com/Promotion">OBC4D</a>
+            &copy; Copyright | <a href="https://premiocondo.com/Promotion/">OBC4D</a>
         </div>
 
     </main>
