--- a/amp/sgcr.html
+++ b/amp/sgcr.html
@@ -10,7 +10,7 @@
     <meta itemprop="name" content="OBCTOP: Situs Judi Slot Thailand Terpercaya Bet 200 Paling Gacor Gampang Maxwin">
     <meta itemprop="description" content="OBCTOP merupakan salah satu situs judi resmi yang menyediakan slot server thailand terpercaya dengan minimal bet 200 rupiah untuk semua permainan slot online yang gacor dan gampang maxwin.">
     <meta itemprop="image" content="https://i.imgur.com/0D1GJl1.png">
-    <meta property="og:url" content="https://siakaduppg.unesa.ac.id/sgcr/">
+    <meta property="og:url" content="https://siakaduppg.unesa.ac.id/s/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="OBCTOP: Situs Judi Slot Thailand Terpercaya Bet 200 Paling Gacor Gampang Maxwin">
     <meta property="og:description" content="OBCTOP merupakan salah satu situs judi resmi yang menyediakan slot server thailand terpercaya dengan minimal bet 200 rupiah untuk semua permainan slot online yang gacor dan gampang maxwin.">
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="OBCTOP: Situs Judi Slot Thailand Terpercaya Bet 200 Paling Gacor Gampang Maxwin">
     <meta name="twitter:description" content="OBCTOP merupakan salah satu situs judi resmi yang menyediakan slot server thailand terpercaya dengan minimal bet 200 rupiah untuk semua permainan slot online yang gacor dan gampang maxwin.">
     <meta name="twitter:image" content="https://i.imgur.com/0D1GJl1.png">
-    <link rel="canonical" href="https://siakaduppg.unesa.ac.id/sgcr/">
+    <link rel="canonical" href="https://siakaduppg.unesa.ac.id/s/">
     <link rel="icon" type="image/png" href="https://i.imgur.com/zq10rAE.png" sizes="16x16">
     <link rel="preconnect" href="https://cdn.ampproject.org">
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
