--- a/amp/aliabola.html
+++ b/amp/aliabola.html
@@ -14,7 +14,7 @@
     <meta name="spiders" content="all"/>
     <meta property="og:title" content="SBOBET88 TERPERCAYA 💫 SITUS TARUHAN MIX PARLAY RESMI AGEN JUDI BOLA ONLINE #1 DI INDONESIA"/>
     <meta property="og:description" content="Sbobet88 menyediakan link terpercaya situs taruhan mix parlay dengan minimal deposit receh 10 ribu sudah bisa bermain di agen judi bola online nomor #1 di Indonesia dengan permainan sportbook paling lengkap."/>
-    <meta property="og:url" content="https://alia.unesa.ac.id/aliabola/"/>
+    <meta property="og:url" content="https://alia.unesa.ac.id/aliabo/"/>
     <meta property="og:site_name" content="JUDI BOLA"/>
     <meta property="og:author" content="JUDI BOLA"/>
     <meta property="og:image" content="https://i.imgur.com/JgoQL2V.png"/>
@@ -22,8 +22,8 @@
     <meta name="geo.region" content="ID-JKT"/>
     <meta name="language" content="Indonesia">
     <meta name="theme-color" content="navy">
-    <link rel="canonical" href="https://alia.unesa.ac.id/aliabola/"/>
-    <link rel="alternate" hreflang="id" href="https://alia.unesa.ac.id/aliabola/"/>
+    <link rel="canonical" href="https://alia.unesa.ac.id/aliabo/"/>
+    <link rel="alternate" hreflang="id" href="https://alia.unesa.ac.id/aliabo/"/>
     <link rel="apple-touch-icon-precomposed" href="https://i.imgur.com/zq10rAE.png">
     <link rel="icon" href="https://i.imgur.com/zq10rAE.png" type="image/x-icon">
     <script async src="https://cdn.ampproject.org/v0.js" nonce="MTU0OTA2NTE2MywzNjQwMjQyMzgw"></script>
