--- a/amp/hkipt.html
+++ b/amp/hkipt.html
@@ -64,10 +64,10 @@
 				<nav>
 										<ul class="nav-secondary">
 						<li>
-							<a href="https://obc4d2025.com/link.php?member=lucyinditski">Masuk</a>
+							<a href="https://obc4d2025.com/link.php?member=sewakwtaiwan">Masuk</a>
 						</li>
 						<li>
-							<a class="button button-secondary button-full-width" href="https://obc4d2025.com/link.php?member=lucyinditski">Daftar Togel Taiwan</a>
+							<a class="button button-secondary button-full-width" href="https://obc4d2025.com/link.php?member=sewakwtaiwan">Daftar Togel Taiwan</a>
 						</li>
 					</ul>
 				</nav>
@@ -86,12 +86,12 @@
 				<div class="container">
 					<div class="column-row align-center-center text-align-center">
 						<div class="column-50 column-inline-block two-column">
-							<a class="button button-large button-full-width" href="https://obc4d2025.com/link.php?member=lucyinditski">
+							<a class="button button-large button-full-width" href="https://obc4d2025.com/link.php?member=sewakwtaiwan">
 								Masuk
 							</a>
 						</div>
 						<div class="column-50 column-inline-block two-column">
-							<a class="button button-large button-secondary button-full-width" href="https://obc4d2025.com/link.php?member=lucyinditski">
+							<a class="button button-large button-secondary button-full-width" href="https://obc4d2025.com/link.php?member=sewakwtaiwan">
 								Daftar Togel Taiwan
 							</a>
 						</div>
