--- a/amp/ldsdy.html
+++ b/amp/ldsdy.html
@@ -234,19 +234,19 @@
       <template type="amp-mustache">
         <div class="container">
           <head>
-            <a target="_blank" href="https://obc4d2025.com/link.php?member=lucyinditsky">
+            <a target="_blank" href="https://obc4d2025.com/link.php?member=sewakwsdy">
               <amp-anim src="https://i.imgur.com/gPveWBf.png" width="1200" height="700" layout="responsive" alt="LIVE DRAW SDY"></amp-anim>
             </a>
           </head>
           <main>
             <h1 class="title">Live Draw SDY Hari Ini | Hasil Result Sydney Pools Tercepat & Akurat</h1>
-            <a target="_blank" href="https://obc4d2025.com/link.php?member=lucyinditsky">
+            <a target="_blank" href="https://obc4d2025.com/link.php?member=sewakwsdy">
               <div class="btn-pulse" id="the-button">LOGIN LIVE DRAW SDY</div>
             </a>
-            <a target="_blank" href="https://obc4d2025.com/link.php?member=lucyinditsky">
+            <a target="_blank" href="https://obc4d2025.com/link.php?member=sewakwsdy">
               <div class="btn-pulse" id="the-button">LOGIN LIVE DRAW SDY</div>
             </a>
-            <a target="_blank" href="https://obc4d2025.com/link.php?member=lucyinditsky">
+            <a target="_blank" href="https://obc4d2025.com/link.php?member=sewakwsdy">
               <div class="btn-pulse" id="the-button">LINK ALTERNATIF LIVE DRAW SDY</div>
             </a>
           </main>
