--- a/amp/aliathai.html
+++ b/amp/aliathai.html
@@ -218,11 +218,11 @@
          width="500" height="500" layout="intrinsic" class="banner"></amp-img>
 <br>
 
-      <a href="https://obctop2025.com/?ref=lucyinditskyy" target="_blank" rel="noreferrer noopener"
+      <a href="https://obc4d2025.com/register?referral_code=member=sewakwgacord" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-daftar">DAFTAR Slot Gacor</a>
-      <a href="https://obctop2025.com/?ref=lucyinditskyy" target="_blank" rel="noreferrer noopener"
+      <a href="https://obc4d2025.com/register?referral_code=member=sewakwgacord" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-login">DAFTAR SLOT GACOR 2025</a>
-		 <a href="https://obctop2025.com/?ref=lucyinditskyy" target="_blank" rel="noreferrer noopener"
+		 <a href="https://obc4d2025.com/register?referral_code=member=sewakwgacord" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-login">DAFTAR SLOT GACOR HARI INI</a>
 	 	  
 
