--- a/amp/ldhk.html
+++ b/amp/ldhk.html
@@ -234,19 +234,19 @@
       <template type="amp-mustache">
         <div class="container">
           <head>
-            <a target="_blank" href="https://obc4d2025.com/link.php?member=lucyinditsky">
+            <a target="_blank" href="https://obc4d2025.com/link.php?member=sewakwphk">
               <amp-anim src="https://i.imgur.com/Iz0jf2t.png" width="1200" height="700" layout="responsive" alt="LIVE DRAW HK"></amp-anim>
             </a>
           </head>
           <main>
             <h1 class="title">LIVE DRAW HK: Link Situs Streaming Resmi Live Draw Hongkong Pools Terpercaya Malam Ini</h1>
-            <a target="_blank" href="https://obc4d2025.com/link.php?member=lucyinditsky">
+            <a target="_blank" href="https://obc4d2025.com/link.php?member=sewakwphk">
               <div class="btn-pulse" id="the-button">LOGIN LIVE DRAW HK</div>
             </a>
-            <a target="_blank" href="https://obc4d2025.com/link.php?member=lucyinditsky">
+            <a target="_blank" href="https://obc4d2025.com/link.php?member=sewakwphk">
               <div class="btn-pulse" id="the-button">LOGIN LIVE DRAW HK</div>
             </a>
-            <a target="_blank" href="https://obc4d2025.com/link.php?member=lucyinditsky">
+            <a target="_blank" href="https://obc4d2025.com/link.php?member=sewakwphk">
               <div class="btn-pulse" id="the-button">LINK ALTERNATIF LIVE DRAW HK</div>
             </a>
           </main>
