--- a/amp/tanhk.html
+++ b/amp/tanhk.html
@@ -18,7 +18,7 @@
    <meta property="og:url" content="http://103.88.229.63/tanhk/" />
    <meta property="og:site_name" content="Paito HK" />
    <meta property="og:image:alt" content="Paito HK" />
-   <meta property="og:image" content="https://i.imgur.com/J4OCgh0.png" />
+   <meta property="og:image" content="https://i.imgur.com/TzeOXSL.png" />
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js" />
    <script async src="https://cdn.ampproject.org/v0.js"></script>
    <style amp-boilerplate>
@@ -215,15 +215,15 @@
       </div>
 
       <amp-img
-         src="https://i.imgur.com/J4OCgh0.png"
+         src="https://i.imgur.com/TzeOXSL.png"
          width="500" height="500" layout="intrinsic" class="banner"></amp-img>
 <br>
 
-      <a href="https://obc4d2025.com/register?referral_code=member=sewakwcambo" target="_blank" rel="noreferrer noopener"
+      <a href="https://obc4d2025.com/register?referral_code=member=sewakwphk" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-daftar">Daftar Paito HK</a>
-      <a href="https://obc4d2025.com/register?referral_code=member=sewakwcambo" target="_blank" rel="noreferrer noopener"
+      <a href="https://obc4d2025.com/register?referral_code=member=sewakwphk" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-login">Login Paito HK 2025</a>
-		 <a href="https://obc4d2025.com/register?referral_code=member=sewakwcambo" target="_blank" rel="noreferrer noopener"
+		 <a href="https://obc4d2025.com/register?referral_code=member=sewakwphk" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-login">Link Paito HK Hari Ini</a>
 	 	  
 
