--- a/amp/libtanwan.html
+++ b/amp/libtanwan.html
@@ -11,7 +11,7 @@
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Togel Taiwan: Agen Judi Togel Taiwan Terpercaya Bet 100 & Streaming Live Draw Taiwan Hari Ini</title>
-   <meta name="description" content="OBC4D merupakan salah satu permainan online yang menyediakan banyak provider slot online server thailand terpercaya dilengkapi dengan link slot gacor hari ini yang gampang maxwin." />
+   <meta name="description" content="Togel taiwan adalah salah satu permainan judi yang sangat populer di kalangan pecinta togel, menawarkan berbagai pilihan taruhan yang menarik dan seru. Agen togel taiwan terpercaya memberikan kemudahan bagi pemain untuk memasang taruhan dengan aman dan nyaman." />
    <meta name="keywords" content="Togel Taiwan"/>
    <meta name="robots" content="index,follow" />
    <link href="https://i.imgur.com/zq10rAE.png" rel="shortcut icon" type="image/x-icon" />
@@ -220,11 +220,11 @@
          width="500" height="500" layout="intrinsic" class="banner"></amp-img>
 <br>
 
-      <a href="https://obc4d2025.com/register?referral_code=member=sewakwcambo" target="_blank" rel="noreferrer noopener"
+      <a href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-daftar">Daftar Togel Taiwan</a>
-      <a href="https://obc4d2025.com/register?referral_code=member=sewakwcambo" target="_blank" rel="noreferrer noopener"
+      <a href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-login">Login Togel Taiwan 2025</a>
-		 <a href="https://obc4d2025.com/register?referral_code=member=sewakwcambo" target="_blank" rel="noreferrer noopener"
+		 <a href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-login">Link Togel Taiwan Hari Ini</a>
 	 	  
 
