--- a/amp/libtanhk.html
+++ b/amp/libtanhk.html
@@ -15,8 +15,8 @@
    <meta name="keywords" content="Paito HK"/>
    <meta name="robots" content="index,follow" />
    <link href="https://i.imgur.com/zq10rAE.png" rel="shortcut icon" type="image/x-icon" />
-   <link rel="canonical" href="http://103.88.229.63/tanhk/" />
-   <meta property="og:url" content="http://103.88.229.63/tanhk/" />
+   <link rel="canonical" href="http://103.88.229.25/libtanhk/" />
+   <meta property="og:url" content="http://103.88.229.25/libtanhk/" />
    <meta property="og:site_name" content="Paito HK" />
    <meta property="og:image:alt" content="Paito HK" />
    <meta property="og:image" content="https://i.imgur.com/TzeOXSL.png" />
@@ -207,7 +207,7 @@
 <body>
    <div class="container">
       <header>
-         <center><a href="http://103.88.229.63/tanhk/"><amp-img id="image"
+         <center><a href="http://103.88.229.25/libtanhk/"><amp-img id="image"
                   class="animated tada infinite slower" src="https://i.imgur.com/oa9zpLV.png"
                   alt="Sbobet" width="278" height="108" layout="intrinsic"></amp-img></a></center>
       </header>
