--- a/amp/aliataiwan.html
+++ b/amp/aliataiwan.html
@@ -9,18 +9,18 @@
     <meta name="robots" content="index, follow">
     <meta itemprop="name" content="Togel Taiwan: Situs Toto Togel Taiwan Bet 100 Rupiah & Live Draw Taiwan Hari Ini">
     <meta itemprop="description" content="Togel taiwan banyak diminati karena merupakan situs toto togel taiwan dengan minimal pemasangan taruhan 100 rupiah saja sudah bisa bermain di togel kamboja dan menonton live streaming live draw taiwan hari ini.">
-    <meta itemprop="image" content="https://i.imgur.com/YEV4pBB.png">
+    <meta itemprop="image" content="https://mabuk-kentang.uk/Kentangbet-Scatterhitam.jpg">
     <meta property="og:url" content="https://alia.unesa.ac.id/aliataiwan/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Togel Taiwan: Situs Toto Togel Taiwan Bet 100 Rupiah & Live Draw Taiwan Hari Ini">
     <meta property="og:description" content="Togel taiwan banyak diminati karena merupakan situs toto togel taiwan dengan minimal pemasangan taruhan 100 rupiah saja sudah bisa bermain di togel kamboja dan menonton live streaming live draw taiwan hari ini.">
-    <meta property="og:image" content="https://i.imgur.com/YEV4pBB.png">
+    <meta property="og:image" content="https://mabuk-kentang.uk/Kentangbet-Scatterhitam.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@TOGEL TAIWAN">
     <meta name="twitter:creator" content="@TOGEL TAIWAN">
     <meta name="twitter:title" content="Togel Taiwan: Situs Toto Togel Taiwan Bet 100 Rupiah & Live Draw Taiwan Hari Ini">
     <meta name="twitter:description" content="Togel taiwan banyak diminati karena merupakan situs toto togel taiwan dengan minimal pemasangan taruhan 100 rupiah saja sudah bisa bermain di togel kamboja dan menonton live streaming live draw taiwan hari ini.">
-    <meta name="twitter:image" content="https://i.imgur.com/YEV4pBB.png">
+    <meta name="twitter:image" content="https://mabuk-kentang.uk/Kentangbet-Scatterhitam.jpg">
     <link rel="canonical" href="https://alia.unesa.ac.id/aliataiwan/">
     <link rel="icon" type="image/png" href="https://i.imgur.com/zq10rAE.png" sizes="16x16">
     <link rel="preconnect" href="https://cdn.ampproject.org">
@@ -1202,7 +1202,7 @@
         "headline": "Togel Taiwan: Situs Toto Togel Taiwan Bet 100 Rupiah & Live Draw Taiwan Hari Ini",
         "description": "Togel taiwan banyak diminati karena merupakan situs toto togel taiwan dengan minimal pemasangan taruhan 100 rupiah saja sudah bisa bermain di togel kamboja dan menonton live streaming live draw taiwan hari ini.",
         "keywords": ["Slot Gacor, situs slot, situs gacor, slot, gacor, slot online"],
-        "image": "https://i.imgur.com/YEV4pBB.png",
+        "image": "https://mabuk-kentang.uk/Kentangbet-Scatterhitam.jpg",
         "url": "#",
         "publisher": {
           "@type": "Organization",
@@ -1222,10 +1222,10 @@
   <body class="custom-background">
     <div class="size-width ff">
       <nav class="y eb ec te">
-        <a href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan">
-          <amp-img src="https://i.imgur.com/oa9zpLV.png" alt="TOGEL TAIWAN" width="160" height="40" layout="fixed"></amp-img>
+        <a href="https://kentangbetsayang.xyz/">
+          <amp-img src="https://i.imgur.com/oW8NREG.png" alt="TOGEL TAIWAN" width="160" height="40" layout="fixed"></amp-img>
         </a>
-        <a href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" rel="noreferrer noopener" target="_blank">
+        <a href="https://kentangbetsayang.xyz/" rel="noreferrer noopener" target="_blank">
           <span class="bb vb b c blink">
             <i class="rd ae qc"></i> JOIN NOW </span>
         </a>
@@ -1252,38 +1252,38 @@
       </div>
       <div class="lb">
         <div class="mb">
-          <amp-img src="https://i.imgur.com/YEV4pBB.png" alt="situs slot gacor" width="800" height="800" layout="responsive"></amp-img>
+          <amp-img src="https://mabuk-kentang.uk/Kentangbet-Scatterhitam.jpg" alt="situs slot gacor" width="800" height="800" layout="responsive"></amp-img>
         </div>
       </div>
       <div class="k l">
         <div class="m">
-          <a href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" rel="noreferrer noopener" target="_blank" class="buttom masuk s">
+          <a href="https://kentangbetsayang.xyz/" rel="noreferrer noopener" target="_blank" class="buttom masuk s">
             <i class="rd xd qc"></i> MASUK </a>
         </div>
         <div class="m">
-          <a href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" rel="noreferrer noopener" target="_blank" class="buttom daftar s">
+          <a href="https://kentangbetsayang.xyz/" rel="noreferrer noopener" target="_blank" class="buttom daftar s">
             <i class="rd ae qc"></i> DAFTAR </a>
         </div>
       </div>
       <div class="k l text-center ye g p-025">
         <div class="m py-05">
-          <a href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" title="Togel" class="flex flex-col text-common text-dn">
+          <a href="https://kentangbetsayang.xyz/" title="Togel" class="flex flex-col text-common text-dn">
             <i class="qd td de nc"></i>TOGEL </a>
         </div>
         <div class="m py-05">
-          <a href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" title="Slot" class="flex flex-col text-common text-dn">
+          <a href="https://kentangbetsayang.xyz/" title="Slot" class="flex flex-col text-common text-dn">
             <i class="qd td ee nc"></i>SLOT </a>
         </div>
         <div class="m py-05">
-          <a href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" title="Casino" class="flex flex-col text-common text-dn">
+          <a href="https://kentangbetsayang.xyz/" title="Casino" class="flex flex-col text-common text-dn">
             <i class="qd td ce nc"></i>CASINO </a>
         </div>
         <div class="m py-05">
-          <a href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" title="Arcade" class="flex flex-col text-common text-dn">
+          <a href="https://kentangbetsayang.xyz/" title="Arcade" class="flex flex-col text-common text-dn">
             <i class="qd td be nc"></i>ARCADE </a>
         </div>
         <div class="m py-05">
-          <a href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" title="Bola" class="flex flex-col text-common text-dn">
+          <a href="https://kentangbetsayang.xyz/" title="Bola" class="flex flex-col text-common text-dn">
             <i class="qd td fe nc"></i>BOLA </a>
         </div>
       </div>
@@ -1370,27 +1370,26 @@
       <div class="size-width nav-bottom">
         <ul class="flex flex-row w-full p-025 m-0">
           <li class="text-center">
-            <a class="px-025 flex flex-col text-common p-05" href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" target="_blank">
+            <a class="px-025 flex flex-col text-common p-05" href="https://kentangbetsayang.xyz/" target="_blank">
               <i class="fas text-lg fa-home"></i>Beranda </a>
           </li>
           <li class="text-center">
-            <a class="px-025 flex flex-col text-common p-05" href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" target="_blank">
+            <a class="px-025 flex flex-col text-common p-05" href="https://kentangbetsayang.xyz/" target="_blank">
               <i class="fas text-lg fa-user-plus"></i>Daftar </a>
           </li>
           <li class="text-center">
-            <a class="px-025 flex flex-col text-common p-05" href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" target="_blank">
+            <a class="px-025 flex flex-col text-common p-05" href="https://kentangbetsayang.xyz/" target="_blank">
               <i class="fas text-lg fa-user"></i>Masuk </a>
           </li>
           <li class="text-center">
-            <a class="px-025 flex flex-col text-common p-05" href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" target="_blank">
+            <a class="px-025 flex flex-col text-common p-05" href="https://kentangbetsayang.xyz/" target="_blank">
               <i class="fa-solid text-lg fa-gift"></i>Promo </a>
           </li>
           <li class="text-center">
-            <a role="button" class="px-025 flex flex-col text-common p-05" href="https://obc4d2025.com/register?referral_code=member=sewakwtaiwan" target="_blank">
+            <a role="button" class="px-025 flex flex-col text-common p-05" href="https://kentangbetsayang.xyz/" target="_blank">
               <i class="fas text-lg fa-headset"></i>Live Chat </a>
           </li>
         </ul>
       </div>
   </body>
 </html>
-
