--- a/amp/libtancor.html
+++ b/amp/libtancor.html
@@ -220,11 +220,11 @@
          width="500" height="500" layout="intrinsic" class="banner"></amp-img>
 <br>
 
-      <a href="https://obc4d2025.com/register?referral_code=member=sewakwgacord" target="_blank" rel="noreferrer noopener"
+      <a href="https://selaluobc4d.xyz/register?referral_code=member=sewakwgacord" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-daftar">DAFTAR Slot Gacor</a>
-      <a href="https://obc4d2025.com/register?referral_code=member=sewakwgacord" target="_blank" rel="noreferrer noopener"
+      <a href="https://selaluobc4d.xyz/register?referral_code=member=sewakwgacord" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-login">DAFTAR SLOT GACOR 2025</a>
-		 <a href="https://obc4d2025.com/register?referral_code=member=sewakwgacord" target="_blank" rel="noreferrer noopener"
+		 <a href="https://selaluobc4d.xyz/register?referral_code=member=sewakwgacord" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-login">DAFTAR SLOT GACOR HARI INI</a>
 	 	  
 
