--- a/amp/libsbobet88.html
+++ b/amp/libsbobet88.html
@@ -221,11 +221,11 @@
          width="500" height="500" layout="intrinsic" class="banner"></amp-img>
 <br>
 
-      <a href="https://selaluobc4d.xyz/register?referral_code=member=sewakwgacord" target="_blank" rel="noreferrer noopener"
+      <a href="https://obcbet70.com/" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-daftar">DAFTAR Sbobet88</a>
-      <a href="https://selaluobc4d.xyz/register?referral_code=member=sewakwgacord" target="_blank" rel="noreferrer noopener"
+      <a href="https://obcbet70.com/" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-login">DAFTAR Sbobet88 2025</a>
-		 <a href="https://selaluobc4d.xyz/register?referral_code=member=sewakwgacord" target="_blank" rel="noreferrer noopener"
+		 <a href="https://obcbet70.com/" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-login">DAFTAR Sbobet88 HARI INI</a>
 	 	  
 
