--- a/amp/obetog.html
+++ b/amp/obetog.html
@@ -487,29 +487,29 @@
                 <div class="jeje-toto">
                     <div class="toto-SLOT">
                         <div class="Jhontoto-container block1">
-                            <a href="https://obc4d2025.com/register?referral_code=member=lucyditsky">
+                            <a href="https://selaluobc4d.xyz/register?referral_code=member=lucyditsky">
                                 <button class="GMTogel"><img src="https://i.imgur.com/zq10rAE.png" width="20px"></button>
                             </a>
-                            <a href="https://obc4d2025.com/register?referral_code=member=lucyditsky">
+                            <a href="https://selaluobc4d.xyz/register?referral_code=member=lucyditsky">
                                 <button class="GMTogel"><img src="https://i.imgur.com/zq10rAE.png" width="20px"></button>
                             </a>
-                            <a href="https://obc4d2025.com/register?referral_code=member=lucyditsky">
+                            <a href="https://selaluobc4d.xyz/register?referral_code=member=lucyditsky">
                                 <button class="GMTogel"><img src="https://i.imgur.com/zq10rAE.png" width="20px"></button>
                             </a>
-                            <a href="https://obc4d2025.com/register?referral_code=member=lucyditsky">
+                            <a href="https://selaluobc4d.xyz/register?referral_code=member=lucyditsky">
                                 <button class="GMTogel"><img src="https://i.imgur.com/zq10rAE.png" width="20px"></button>
                             </a>
                         </div>
                         <br>
 
                         <div class="block-img">
-                            <a href="https://obc4d2025.com/register?referral_code=member=lucyditsky" target="_blank" rel="noopener noreferrer nofollow">
+                            <a href="https://selaluobc4d.xyz/register?referral_code=member=lucyditsky" target="_blank" rel="noopener noreferrer nofollow">
                                 <amp-img height="320" width="320" layout="responsive" alt="TOGEL ONLINE" src="https://i.imgur.com/YEV4pBB.png"></amp-img>
                             </a>
                         </div>
 
                         <div class="Jhontoto">
-                            <a href="https://obc4d2025.com/register?referral_code=member=lucyditsky" target="_blank" rel="noopener noreferrer nofollow">
+                            <a href="https://selaluobc4d.xyz/register?referral_code=member=lucyditsky" target="_blank" rel="noopener noreferrer nofollow">
                                 <button class="btn2"><strong>TOGEL ONLINE TERPERCAYA</strong>
                                     <div id="container-stars">
                                         <div id="stars"></div>
@@ -520,8 +520,8 @@
                                     </div>
                                 </button>
                             </a>
-                            <a href="https://obc4d2025.com/register?referral_code=member=lucyditsky" target="_blank" rel="noopener noreferrer nofollow" class="block">LOGIN AKUN</a>
-                            <a href="https://obc4d2025.com/register?referral_code=member=lucyditsky" target="_blank" rel="noopener noreferrer nofollow" class="block">DAFTAR AKUN</a>
+                            <a href="https://selaluobc4d.xyz/register?referral_code=member=lucyditsky" target="_blank" rel="noopener noreferrer nofollow" class="block">LOGIN AKUN</a>
+                            <a href="https://selaluobc4d.xyz/register?referral_code=member=lucyditsky" target="_blank" rel="noopener noreferrer nofollow" class="block">DAFTAR AKUN</a>
                     </div> 
                     <div class="artikel">
 
