--- a/amp/obetog.html
+++ b/amp/obetog.html
@@ -7,7 +7,7 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width,maximum-scale=1">
             <meta http-equiv="content-language" content="id">
-            <link rel="canonical" href="https://obe.usk.ac.id/obetog/">
+            <link rel="canonical" href="https://obe.usk.ac.id/obetog/index.html">
             <title>OBC4D - Daftar Agen Judi Togel Online Bet 100 Rupiah & Keluaran Live Draw HK Hari Ini</title>
             <meta name="description" content="OBC4D merupakan salah satu daftar agen judi togel online resmi terpercaya minimal bet 100 rupiah. Obc4d menyediakan keluaran result live draw hk hari ini dan paito hk keluaran tercepat.">
             <meta name="keywords" content="TOGEL ONLINE">
@@ -17,7 +17,7 @@
             <meta content="width" name="MobileOptimized">
             <meta property="og:title" content="OBC4D - Daftar Agen Judi Togel Online Bet 100 Rupiah & Keluaran Live Draw HK Hari Ini">
             <meta property="og:description" content="OBC4D merupakan salah satu daftar agen judi togel online resmi terpercaya minimal bet 100 rupiah. Obc4d menyediakan keluaran result live draw hk hari ini dan paito hk keluaran tercepat.">
-            <meta property="og:url" content="https://obe.usk.ac.id/obetog/">
+            <meta property="og:url" content="https://obe.usk.ac.id/obetog/index.html">
             <meta property="og:site_name" content="TOGEL ONLINE">
             <meta property="og:author" content="TOGEL ONLINE">
             <meta property="og:image" content="https://i.imgur.com/YEV4pBB.png">
@@ -533,7 +533,7 @@
                 </div>
                 <hr>
                 <div class="footer">
-                    &copy; OBC4D | <a href="https://obe.usk.ac.id/obetog/">TOGEL ONLINE</a>
+                    &copy; OBC4D | <a href="https://obe.usk.ac.id/obetog/index.html">TOGEL ONLINE</a>
                 </div>
             </main>
         </body>
