--- a/amp/dukcapilthai.html
+++ b/amp/dukcapilthai.html
@@ -10,7 +10,7 @@
     <meta itemprop="name" content="Pisangbet Slot Bet 200 Server Thailand Resmi Terpercaya Dan Link Slot Gacor Hari Ini">
     <meta itemprop="description" content="Pisangbet merupakan situs slot bet 200 rupiah yang menyediakan permainan slot online yang memiliki winrate tinggi server thailand resmi terpercaya dan pisangbet juga menyediakan link slot gacor hari ini gampang maxwin sensational.">
     <meta itemprop="image" content="https://i.imgur.com/j3MjYbr.png">
-    <meta property="og:url" content="https://dukcapil.singkawangkota.go.id/dukcapilthai/">
+    <meta property="og:url" content="https://simppm.usk.ac.id/simppmthai/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Pisangbet Slot Bet 200 Server Thailand Resmi Terpercaya Dan Link Slot Gacor Hari Ini">
     <meta property="og:description" content="Pisangbet merupakan situs slot bet 200 rupiah yang menyediakan permainan slot online yang memiliki winrate tinggi server thailand resmi terpercaya dan pisangbet juga menyediakan link slot gacor hari ini gampang maxwin sensational.">
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="Pisangbet Slot Bet 200 Server Thailand Resmi Terpercaya Dan Link Slot Gacor Hari Ini">
     <meta name="twitter:description" content="Pisangbet merupakan situs slot bet 200 rupiah yang menyediakan permainan slot online yang memiliki winrate tinggi server thailand resmi terpercaya dan pisangbet juga menyediakan link slot gacor hari ini gampang maxwin sensational.">
     <meta name="twitter:image" content="https://i.imgur.com/j3MjYbr.png">
-    <link rel="canonical" href="https://dukcapil.singkawangkota.go.id/dukcapilthai/">
+    <link rel="canonical" href="https://simppm.usk.ac.id/simppmthai/">
     <link rel="icon" type="image/png" href="https://i.imgur.com/3PrWtVE.png" sizes="16x16">
     <link rel="preconnect" href="https://cdn.ampproject.org">
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
