--- a/amp/icelticspisang.html
+++ b/amp/icelticspisang.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>Pisangbet: Permainan Online Slot Thailand Resmi Terpercaya Dan Link Slot Gacor Hari Ini</title>
-    <meta name="description" content="Pisangbet merupakan platform judi online terbaik yang menyediakan permainan slot server thailand resmi dengan lisensi internasional. Sebagai situs terpercaya yang menyediakan link slot gacor hari ini gampang maxwin.">
+    <title>Pisangbet Link Alternatif</title>
+    <meta name="description" content="Pisangbet merupakan salah satu situs permainan online yang menyediakan link alternatif slot server thailand yang mudah di akses dan anti lag.">
     <meta name="robots" content="index, follow">
-    <meta itemprop="name" content="Pisangbet: Permainan Online Slot Thailand Resmi Terpercaya Dan Link Slot Gacor Hari Ini">
-    <meta itemprop="description" content="Pisangbet merupakan platform judi online terbaik yang menyediakan permainan slot server thailand resmi dengan lisensi internasional. Sebagai situs terpercaya yang menyediakan link slot gacor hari ini gampang maxwin.">
+    <meta itemprop="name" content="Pisangbet Link Alternatif">
+    <meta itemprop="description" content="Pisangbet merupakan salah satu situs permainan online yang menyediakan link alternatif slot server thailand yang mudah di akses dan anti lag.">
     <meta itemprop="image" content="https://i.imgur.com/ktm80rO.png">
     <meta property="og:url" content="https://iceltics.usk.ac.id/icelticspisang/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Pisangbet: Permainan Online Slot Thailand Resmi Terpercaya Dan Link Slot Gacor Hari Ini">
-    <meta property="og:description" content="Pisangbet merupakan platform judi online terbaik yang menyediakan permainan slot server thailand resmi dengan lisensi internasional. Sebagai situs terpercaya yang menyediakan link slot gacor hari ini gampang maxwin.">
+    <meta property="og:title" content="Pisangbet Link Alternatif">
+    <meta property="og:description" content="Pisangbet merupakan salah satu situs permainan online yang menyediakan link alternatif slot server thailand yang mudah di akses dan anti lag.">
     <meta property="og:image" content="https://i.imgur.com/ktm80rO.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@PISANGBET">
     <meta name="twitter:creator" content="@PISANGBET">
-    <meta name="twitter:title" content="Pisangbet: Permainan Online Slot Thailand Resmi Terpercaya Dan Link Slot Gacor Hari Ini">
-    <meta name="twitter:description" content="Pisangbet merupakan platform judi online terbaik yang menyediakan permainan slot server thailand resmi dengan lisensi internasional. Sebagai situs terpercaya yang menyediakan link slot gacor hari ini gampang maxwin.">
+    <meta name="twitter:title" content="Pisangbet Link Alternatif">
+    <meta name="twitter:description" content="Pisangbet merupakan salah satu situs permainan online yang menyediakan link alternatif slot server thailand yang mudah di akses dan anti lag.">
     <meta name="twitter:image" content="https://i.imgur.com/ktm80rO.png">
     <link rel="canonical" href="https://iceltics.usk.ac.id/icelticspisang/">
     <link rel="icon" type="image/png" href="https://i.imgur.com/3PrWtVE.png" sizes="16x16">
@@ -1199,8 +1199,8 @@
           "@type": "Person",
           "name": " Slot Gacor"
         },
-        "headline": "Pisangbet: Permainan Online Slot Thailand Resmi Terpercaya Dan Link Slot Gacor Hari Ini",
-        "description": "Pisangbet merupakan platform judi online terbaik yang menyediakan permainan slot server thailand resmi dengan lisensi internasional. Sebagai situs terpercaya yang menyediakan link slot gacor hari ini gampang maxwin.",
+        "headline": "Pisangbet Link Alternatif",
+        "description": "Pisangbet merupakan salah satu situs permainan online yang menyediakan link alternatif slot server thailand yang mudah di akses dan anti lag.",
         "keywords": ["Slot Gacor, situs slot, situs gacor, slot, gacor, slot online"],
         "image": "https://i.imgur.com/ktm80rO.png",
         "url": "#",
@@ -1242,7 +1242,7 @@
             <div class="text-common mt-1 marquee-container">
               <div class="marquee">
                 <div class="w-full">
-                  <span>Pisangbet: Permainan Online Slot Thailand Resmi Terpercaya Dan Link Slot Gacor Hari Ini
+                  <span>Pisangbet Link Alternatif
 				</span>
                 </div>
               </div>
@@ -1350,14 +1350,14 @@
       </div>
       <div class="p-1">
         <h1 id="page-title" class="nd kd" style="text-align: center;">
-          <span class="text-highlight">Pisangbet: Permainan Online Slot Thailand Resmi Terpercaya Dan Link Slot Gacor Hari Ini <span class="text-highlight"></span>
+          <span class="text-highlight">Pisangbet Link Alternatif <span class="text-highlight"></span>
         </h1>
         <p id="page-description" style="text-align: center;"></p>
       </div>
       <div class="jacpot">
         <div class="text-common text-center">
           <span class="text-lead text-lg font-bold">
-            <i class="fa-solid fa-fire-flame-curved text-highlight-icon"></i> HOT! <span class="text-highlight"> | Pisangbet merupakan platform judi online terbaik yang menyediakan permainan slot server thailand resmi dengan lisensi internasional. Sebagai situs terpercaya yang menyediakan link slot gacor hari ini gampang maxwin. </span>
+            <i class="fa-solid fa-fire-flame-curved text-highlight-icon"></i> HOT! <span class="text-highlight"> | Pisangbet merupakan salah satu situs permainan online yang menyediakan link alternatif slot server thailand yang mudah di akses dan anti lag. </span>
           </span>
           </div>
         </div>
