--- a/amp/kecamatanpasirjambupis.html
+++ b/amp/kecamatanpasirjambupis.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,maximum-scale=1">
         <meta http-equiv="content-language" content="id">
-        <link rel="canonical" href="https://kecamatanpasirjambu.bandungkab.go.id/pis/">
+        <link rel="canonical" href="https://kecamatanpasirjambu.bandungkab.go.id/pis/index.html">
         <title>Pisangbet: Slot Thailand 2025 Resmi Terpercaya Dan Link Slot Gacor Hari Ini</title>
         <meta name="description" content="Pisangbet adalah situs slot thailand 2025 resmi terpercaya minimal bet 200 rupiah untuk semua permainan slot online yang tersedia di situs pisangbet dengan link slot gacor hari ini gampang maxwin.">
         <meta name="keywords" content="PISANGBET">
@@ -15,7 +15,7 @@
         <meta content="width" name="MobileOptimized">
         <meta property="og:title" content="Pisangbet: Slot Thailand 2025 Resmi Terpercaya Dan Link Slot Gacor Hari Ini">
         <meta property="og:description" content="Pisangbet adalah situs slot thailand 2025 resmi terpercaya minimal bet 200 rupiah untuk semua permainan slot online yang tersedia di situs pisangbet dengan link slot gacor hari ini gampang maxwin.">
-        <meta property="og:url" content="https://kecamatanpasirjambu.bandungkab.go.id/pis/">
+        <meta property="og:url" content="https://kecamatanpasirjambu.bandungkab.go.id/pis/index.html">
         <meta property="og:site_name" content="PISANGBET">
         <meta property="og:author" content="PISANGBET">
         <meta property="og:image" content="https://i.imgur.com/l9nVM1h.png">
@@ -531,7 +531,7 @@
             </div>
             <hr>
             <div class="footer">
-                &copy; PISANGBET | <a href="https://kecamatanpasirjambu.bandungkab.go.id/pis/">SLOT GACOR</a>
+                &copy; PISANGBET | <a href="https://kecamatanpasirjambu.bandungkab.go.id/pis/index.html">SLOT GACOR</a>
             </div>
         </main>
     </body>
