--- a/amp/solokanjerukpo.html
+++ b/amp/solokanjerukpo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,maximum-scale=1">
         <meta http-equiv="content-language" content="id">
-        <link rel="canonical" href="https://kecamatansolokanjeruk.bandungkab.go.id/solokanjerukpo/index.html">
+        <link rel="canonical" href="https://kecamatansolokanjeruk.bandungkab.go.id/public/solokanjerukpo/index.html">
         <title>PISANGTOTO - Togel Taiwan Bet 100 Rupiah & Data Taiwan 2025 Resmi Terbaru Terupdate</title>
         <meta name="description" content="PISANGTOTO merupakan situs togel taiwan dengan minimal bet Rp 100 rupiah saja sudah bisa melakukan pemasangan taruhan togel taiwan. Pisangtoto menyediakan data taiwan paling terbaru 2025 dan selalu di update setiap hari.">
         <meta name="keywords" content="PISANGTOTO">
@@ -14,7 +14,7 @@
         <meta content="width" name="MobileOptimized">
         <meta property="og:title" content="PISANGTOTO - Togel Taiwan Bet 100 Rupiah & Data Taiwan 2025 Resmi Terbaru Terupdate">
         <meta property="og:description" content="PISANGTOTO merupakan situs togel taiwan dengan minimal bet Rp 100 rupiah saja sudah bisa melakukan pemasangan taruhan togel taiwan. Pisangtoto menyediakan data taiwan paling terbaru 2025 dan selalu di update setiap hari.">
-        <meta property="og:url" content="https://kecamatansolokanjeruk.bandungkab.go.id/solokanjerukpo/index.html">
+        <meta property="og:url" content="https://kecamatansolokanjeruk.bandungkab.go.id/public/solokanjerukpo/index.html">
         <meta property="og:site_name" content="PISANGTOTO">
         <meta property="og:author" content="PISANGTOTO">
         <meta property="og:image" content="https://i.imgur.com/CXSXMnc.png">
@@ -530,7 +530,7 @@
             </div>
             <hr>
             <div class="footer">
-                &copy; PISANGTOTO | <a href="https://kecamatansolokanjeruk.bandungkab.go.id/solokanjerukpo/index.html">TOGEL TAIWAN</a>
+                &copy; PISANGTOTO | <a href="https://kecamatansolokanjeruk.bandungkab.go.id/public/solokanjerukpo/index.html">TOGEL TAIWAN</a>
             </div>
         </main>
     </body>
