--- a/amp/agrabill.html
+++ b/amp/agrabill.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,maximum-scale=1">
         <meta http-equiv="content-language" content="id">
-        <link rel="canonical" href="https://agrabill.agratek.id/static/">
+        <link rel="canonical" href="https://agrabill.agratek.id/static/img/">
         <title>OBC4D: Live Draw Taiwan - Situs Togel Taiwan Resmi Terpercaya Bet 100 Rupiah</title>
         <meta name="description" content="OBC4D menyediakan link streaming live draw taiwan setiap hari di siarkan langsung. Obc4d juga merupakan situs togel taiwan resmi terpercaya dengan minimal pemasangan taruhan 100 rupiah pasaran togel kamboja.">
         <meta name="keywords" content="OBC4D">
@@ -14,7 +14,7 @@
         <meta content="width" name="MobileOptimized">
         <meta property="og:title" content="OBC4D: Live Draw Taiwan - Situs Togel Taiwan Resmi Terpercaya Bet 100 Rupiah">
         <meta property="og:description" content="OBC4D menyediakan link streaming live draw taiwan setiap hari di siarkan langsung. Obc4d juga merupakan situs togel taiwan resmi terpercaya dengan minimal pemasangan taruhan 100 rupiah pasaran togel kamboja.">
-        <meta property="og:url" content="https://agrabill.agratek.id/static/">
+        <meta property="og:url" content="https://agrabill.agratek.id/static/img/">
         <meta property="og:site_name" content="OBC4D">
         <meta property="og:author" content="OBC4D">
         <meta property="og:image" content="https://i.imgur.com/MJGs6Ee.png">
@@ -530,7 +530,7 @@
             </div>
             <hr>
             <div class="footer">
-                &copy; OBC4D | <a href="https://agrabill.agratek.id/static/">BUKU MIMPI</a>
+                &copy; OBC4D | <a href="https://agrabill.agratek.id/static/img/">BUKU MIMPI</a>
             </div>
         </main>
     </body>
